Remove more add-opens